@@ -14,7 +14,7 @@
     <div id="extended-metadata" class="row"<%= meta_visible(:meta) %>>
       <table class="fieldset" cellpadding="0" cellspacing="0" border="0">
         <tr>
-          <td class="label"><label for="layout_content_type">Content&#8209;Type</label></td>
+          <th class="label"><label for="layout_content_type">Content&#8209;Type</label></td>
           <td class="field"><%= text_field "layout", "content_type", :class => 'textbox', :maxlength => 40 %></td>
         </tr>
       </table>
