@@ -365,18 +365,18 @@ h1 {
   border-top: 1px solid #DFD3C3;
   padding: 6px;
 }
-#content table.fieldset td.label {
+#content table.fieldset th.label {
   padding-top: 10px;
   padding-right: 8px;
   vertical-align: top;
-  whitespace: nowrap;
+  white-space: nowrap;
   width: 1%;
   text-align: left;
 }
 #content .fieldset label {
   font-weight: normal;
 }
-#content table.fieldset td.label .optional {
+#content table.fieldset th.label .optional {
   color: #929488;
 }
 #content table.fieldset td.field {
