@@ -1,6 +1,7 @@
 == Change Log
 
 === SVN
+* Use TH for fieldset tables and correct error in CSS. [skrat]
 * Adjust admin links and r:breadcrumbs tag to deal with Rails site prefix. 
 [Sean Cribbs] 
 * Adjust tags to deal with Rails site prefix (relative_url_root). 
